--- a/dinner_surprise/roses.html
+++ b/dinner_surprise/roses.html
@@ -218,7 +218,7 @@
       <button class="tetBtn" id="b3" type="button"></button>
     </div>
 
-    
+    <div class="status" id="status">Align the blooms.</div>
   </div>
 
 </div>
@@ -226,20 +226,20 @@
 <script>
 (() => {
   const NODE_RED_URL = "http://192.168.1.50:1880/escape/event";
-  const NEXT_PAGE = "entree1.html";
+  const NEXT_PAGE = "napkin_rings.html";
   const NAV_DELAY_MS = 50;
 
-  const CODE = ["T","L","O","I"];
+  const CODE = ["O","T","L2","L1"];
 
   // NOTE: Tetromino color is unified via CSS variable --tet
   const PIECES = [
     { id:"I", cells:[[1,0],[1,1],[1,2],[1,3]] },
     { id:"O", cells:[[1,1],[1,2],[2,1],[2,2]] },
-    { id:"T", cells:[[1,1],[1,2],[1,3],[2,2]] },
+    { id:"T", cells:[[0,2],[1,2],[1,3],[2,2]] },
     { id:"S", cells:[[1,2],[1,3],[2,1],[2,2]] },
     { id:"Z", cells:[[1,1],[1,2],[2,2],[2,3]] },
-    { id:"J", cells:[[1,1],[2,1],[2,2],[2,3]] },
-    { id:"L", cells:[[1,3],[2,1],[2,2],[2,3]] },
+    { id:"L2", cells:[[2,1],[1,1],[1,2],[1,3]] },
+    { id:"L1", cells:[[1,3],[2,1],[2,2],[2,3]] },
   ];
 
   const buttons = [...Array(4)].map((_,i)=>document.getElementById("b"+i));
